@@ -1,6 +1,8 @@
 Revision history for Spreadsheet-HTML
 
 0.09
+    - fixed manifest (left out test data dir)
+    - finished Spreadsheet:HTML::CSV
 
 0.08
     - added flip and mirror
